fixed large gap between directions

--- a/src/components/Direction.css
+++ b/src/components/Direction.css
@@ -1,16 +1,12 @@
+
+
 .Direction {
+    margin: auto;
     height: 46px;
     width: 480px;
-
-    margin-top: 15px;
-   
-    margin: auto;
     border-radius: 10px;
     border: solid;
     border-color: black;
-    padding: 0px;
-    margin-top: 20px;
-    margin-bottom: 20px;
     background-color: #cecdc5;
     overflow: hidden;
     box-shadow:inset 2px 2px 2px 0px rgba(255,255,255,.5), 7px 7px 20px 0px rgba(0,0,0,.1), 4px 4px 5px 0px rgba(0,0,0,.1);
@@ -34,8 +30,11 @@
     margin-bottom: 9px;
 }
 
+
+
 .Direction:hover {
     background-color: #fff;
+    border-radius: 10px;
   }
   
 .Direction:hover > h2 { background-color: #fff; }
