--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -2,4 +2,7 @@
     display: flex;
     align-items: center;
     flex-direction: column;
+    border-radius: 10px;
+    gap: 10px;
+    overflow: hidden;
 }
