--- a/src/components/SearchBar.css
+++ b/src/components/SearchBar.css
@@ -1,98 +1,19 @@
-/* .searchInputs {
-    margin-top: 15px;
-    display: block;
-    height: 60px;
-    overflow: hidden;
-  }
-  
-  .search input {
-    background-color: white;
-    border: 0;
-    border-radius: 10px;
-    border-top-right-radius: 0px;
-    border-bottom-right-radius: 0px;
-    font-size: 18px;
-    padding: 15px;
-    height: 30px;
-    width: 400px;
-  }
-  
-  .searchIcon {
-    height: 60px;
-    width: 50px;
-    background-color: white;
-    display: inline-block;
-    border-top-right-radius: 10px;
-    border-bottom-right-radius: 10px;
-  }
-  
-  input:focus {
-    outline: none;
-  }
-  .searchIcon svg {
-    font-size: 35px;
-    color: red;
-  }
-  
-  .dataResult {
-    margin-top: 5px;
-    width: 400px;
-    height: 200px;
-    background-color: white;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-    overflow: hidden;
-    overflow-y: auto;
-    border-radius: 10px;
-  }
-  
-  .dataResult::-webkit-scrollbar {
-    display: none;
-  }
-  
-  .dataResult .dataItem {
-    width: 100%;
-    height: 50px;
-    
-    color: black;
-  }
-  
-  .dataItem p {
-    margin-left: 10px;
-  }
-  a {
-    text-decoration: none;
-  }
-  
-  a:hover {
-    background-color: lightgrey;
-  }
-  
-  #clearBtn {
-    cursor: pointer;
-  }
 
-  .search {
-    
-    justify-content: center;
-  }
-
-*/
 
 .searchInputs {
-  margin-top: 105px;
   display: flex;
 }
 
 .search input {
   background-color: white;
   border: 0;
-  border-radius: 2px;
+  border-radius: 10px;
   border-top-right-radius: 0px;
   border-bottom-right-radius: 0px;
   font-size: 18px;
   padding: 15px;
   height: 30px;
-  width: 300px;
+  width: 400px;
 }
 
 .searchIcon {
@@ -101,6 +22,8 @@
   background-color: white;
   display: grid;
   place-items: center;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
 }
 
 input:focus {
@@ -108,11 +31,13 @@ input:focus {
 }
 .searchIcon svg {
   font-size: 35px;
+  color: black;
+  opacity: 20%;
 }
 
 .dataResult {
   margin-top: 5px;
-  width: 300px;
+  width: 400px;
   height: 200px;
   background-color: white;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
